idf_component_register(SRCS "main.cpp"
                            "animation/CarLight.cpp"
                            "animation/colors/ColorConverter.cpp"
                            "animation/filters/IIRSecondOrder.cpp"
                            "animation/filters/RC.cpp"
                            "connect/Connection.cpp"
                            "led_driver/LEDDriver.cpp"
                    INCLUDE_DIRS ".")
